# flamenco

./: .gitignore  CHANGELOG.md  LICENSE.txt  README-top.md  README.md  brender.py  brender.sqlite  client.py  config.py.example  config.py_tmpl  create_sleepy_job.py  deploy_docs.sh  gulpfile.js  master.py  model.py  package-lock.json  package.json  php_client.php  pyproject.toml  requirements-dev.txt  requirements.txt  rsync_ui.sh  server.py  setup.cfg  setup.py  slave.py  test-task-update-batch.py  update_version.sh
brender/: brender.py  config.py.example
dashboard/: .dashboard.py.swp  .htaccess  __init__.py  config.php  controllers.py  dashboard.py  index.php
docs/: Makefile  Pipfile  conf.py  index.rst  mkdocs.yml  worker_request_loop.txt
flamenco/: __init__.py  auth.py  blender_cloud_addon.py  cli.py  eve_hooks.py  eve_settings.py  routes.py  setup.py  utils.py
server/: .gitignore  __init__.py  brender.sqlite.bak  controllers.py  jobs.py  model.py  server.py  shots.py  utils.py  workers.py
temp/: client.py  stupid_client.py  stupid_master.py  test_client.py  test_master.py
tests/: abstract_flamenco_test.py  logging_config.py  test_access.py  test_blender_cloud_addon.py  test_celery_job_cleanup.py  test_depsgraph.py  test_flamenco_extension.py  test_flamenco_utils.py  test_job_archival.py  test_job_compiler_blender_render.py  test_job_compiler_blender_render_progressive.py  test_job_compiler_blender_video_chunks.py  test_job_compilers.py  test_job_manager.py  test_job_patch.py  test_job_runnability_check.py  test_jwt.py  test_manager_linking.py  (+11 more)
(+561 files in other folders)
